--- a/presentation/penalize.regression.presentation.Rmd
+++ b/presentation/penalize.regression.presentation.Rmd
@@ -3,7 +3,7 @@ title: "Penalize Regression R Package"
 subtitle: |
   Penalize Regression R Package 
 author: "JuHyun Kang"
-date: "June 5, 2025"
+date: "June 6, 2025"
 output:
   beamer_presentation:
     latex_engine: xelatex
@@ -14,9 +14,9 @@ fontsize: 8pt
 institute: The Three Sisters of Newton \newline School of Mathematics, Statistics and Data Science \newline Sungshin Women's University
 header-includes: \input{header_includes.tex}
 ---
-\section{Introduction}
+# Introduction
 
-# Introduction with penalize regression
+## Introduction with penalize regression
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 <!--\begin{align*}
 \min_{\boldsymbol{\beta}} \left\{\frac{1}{2n} \left\| \mathbf{y} - \mathbf{X} \boldsymbol{\beta} \right\|^2+\sum_{j=1}^p P_\lambda(|\beta_j|) \right\}
@@ -36,14 +36,14 @@ header-includes: \input{header_includes.tex}
 
 - SCAD
 
-# Penalize Regression - Ridge
+## Penalize Regression - Ridge
 $$
 \frac{1}{2n} || y-X \beta|| + \lambda ||\beta||_2^2
 $$
 - Object function of ridge is strictly convex thus we can consider convex optimization problem
 - Ridge method has a closed form
 
-# Penalize Regression - Lasso
+## Penalize Regression - Lasso
 $$
 \frac{1}{2n} || y-X \beta|| + \lambda ||\beta||_1
 $$
@@ -51,7 +51,7 @@ $$
 
 - But it is difficult to considered as differenitable algorithms
 
-# Penalize Regression - Elastic Net
+## Penalize Regression - Elastic Net
 $$
 \frac{1}{2n} || y-X \beta|| + \lambda_1 ||\beta||_1 + \lambda_2 ||\beta||_2^2 
 $$
@@ -59,33 +59,27 @@ $$
 - Objective function of elastic net is convex, ..내용 추가
 
 
-# Penalize Regression - Minimax Concave Penalty (MCP)
+## Penalize Regression - Minimax Concave Penalty (MCP)
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 
-# Penalize Regression - Smoothing Clipped Absolute Deviation (SCAD)
+## Penalize Regression - Smoothing Clipped Absolute Deviation (SCAD)
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 
 
-## Algorithms
+# Algorithms
 
-# Gradient Descent Algorithm (GD)
+## Coordinate Descent Algorithm (CDA)
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 
-# Coordinate Descent Algorithm (CDA)
+## Fast Iterative Soft-Thresholding Algorithm (FISTA)
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 
-# Projected Gradient Descent Algorithm (PGD)
+## Newton-Raphson Algorithm (NR)
 - A decision tree is a predictive model that splits the input space into regions using simple decision rules.
 
-# Fast Iterative Soft-Thresholding Algorithm (FISTA)
-- A decision tree is a predictive model that splits the input space into regions using simple decision rules.
+# R Package
 
-# Newton-Raphson Algorithm (NR)
-- A decision tree is a predictive model that splits the input space into regions using simple decision rules.
-
-## R Package
-
-# Functions
+## Functions
 ```{r}
 sq.loss <- function(y) {
   y.bar <- mean(y)
